# analytics

./: .gitignore  ALGORITHMS.md  README.md  package-lock.json  package.json  pubspec.yaml  tsconfig.json
core/: .gitignore  Cargo.toml
core/src/: arousal.rs  baselines.rs  calories.rs  circadian.rs  coach.rs  cycle.rs  cycles.rs  fitness.rs  har.rs  hrv.rs  illness.rs  lib.rs  nocturnal.rs  notify.rs  readiness.rs  readiness_index.rs  recovery.rs  regularity.rs  resting.rs  restlessness.rs  sessions.rs  sleep.rs  spo2.rs  steps.rs  strain.rs  stress.rs  trends.rs  types.rs  util.rs  wake.rs  zones.rs
core/src/decode/: live.rs  mod.rs  records.rs
core/src/frontier/: acclimatization.rs  af_burden.rs  alcohol.rs  coherence.rs  light.rs  meal.rs  mod.rs  orthostatic.rs  recovery_debt.rs
core/src/hz1/: asymmetry.rs  circ_hrv.rs  cvhr.rs  longhrv.rs  mod.rs  prsa.rs  sri.rs
core/worker-test/: index.mjs  wrangler.toml
docs/: ALGORITHM_CATALOG_1HZ.md
lib/: onehz.dart  openstrap_analytics.dart
lib/src/: arousal.dart  baselines.dart  calories.dart  circadian.dart  coach.dart  (+25 more)
scripts/: decode_parity.ts  oracle.ts  parity_all.ts
src/: activity.ts  advanced.ts  arousal.ts  baselines.ts  calories.ts  circadian.ts  coach.ts  cycle.ts  cycles.ts  fitness.ts  har.ts  hrv.ts  illness.ts  index.ts  nocturnal.ts  notify.ts  readiness.ts  readiness_index.ts  recovery.ts  regularity.ts  resting.ts  restlessness.ts  sessions.ts  sleep.ts  spo2.ts  steps.ts  strain.ts  stress.ts  trends.ts  types.ts  util.ts  wake.ts  zones.ts
test/: _harness.dart  analytics_test.dart
(+84 files in other folders)
