[package]
name = "openstrap-core"
version = "0.1.0"
edition = "2021"
description = "OpenStrap analytics core — single Rust implementation, compiled to wasm (Cloudflare Worker / web) and native (Flutter via FFI). Ports openstrap-analytics 1:1."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
